fix(modal): fix z-index for close icon

--- a/src/components/modal/styles.module.css
+++ b/src/components/modal/styles.module.css
@@ -31,4 +31,5 @@
 
 .close-icon {
     cursor: pointer;
+    z-index: 100;
 }
